kustomize/staking/staking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staking-philiplehmann
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staking-philiplehmann
  template:
    metadata:
      labels:
        app: staking-philiplehmann
    spec:
      imagePullSecrets:
        - name: docker-registry-github
      containers:
        - name: staking-philiplehmann
          image: ghcr.io/philiplehmann/staking:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      restartPolicy: Always
