kustomize/staking/staking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staking-philiplehmann
spec:
  selector:
    app: staking-philiplehmann
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
