kustomize/staking/staking-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staking-philiplehmann
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  rules:
  - host: staking.philiplehmann.ch
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: staking-philiplehmann
            port:
              number: 3000
  tls:
  - hosts:
    - staking.philiplehmann.ch
    secretName: staking-philiplehmann-cert
